# orbitcpp0x

./: AUTHORS  MAINTAINERS  Makefile.am  NEWS  ORBit-2.0-cpp.pc.in  ORBit-CosNaming-2.0-cpp.pc.in  ProjectHome.md  README  autogen.sh  configure.ac  configure.in
docs/: index.html
orbitcpp/idl-compiler/: IDLMethod.cc  IDLMethod.h  Makefile.am  base.cc  base.h  debug.h  language.cc  language.h  pass.h  pass_gather.cc  pass_gather.h  pass_idl_it.cc  pass_idl_it.h  pass_skels.cc  pass_stubs.cc  pass_stubs.h  types.cc  (+3 more)
orbitcpp/idl-compiler/types/: IDLAny.cc  IDLAny.h  IDLArray.cc  IDLArray.h  IDLArrayList.h  IDLAttribAccessor.cc  IDLAttribAccessor.h  IDLAttribute.h  IDLBoolean.cc  IDLBoolean.h  IDLCaseStmt.cc  IDLCaseStmt.h  IDLCompound.cc  IDLCompoundSeqElem.cc  IDLCompoundSeqElem.h  IDLElement.cc  IDLElement.h  IDLEnum.cc  IDLEnum.h  IDLEnumComponent.h  IDLInhibited.h  IDLInterface.cc  IDLInterface.h  IDLMethod.cc  IDLMethod.h  IDLModule.h  IDLObject.cc  IDLObject.h  IDLOperation.cc  IDLOperation.h  IDLScope.cc  IDLScope.h  IDLSequence.cc  IDLSequence.h  IDLSimpleType.cc  IDLSimpleType.h  IDLString.cc  IDLString.h  IDLStruct.cc  IDLType.cc  (+12 more)
orbitcpp/orb-cpp/: Makefile.am  orbitcpp.h  orbitcpp_any.cc  orbitcpp_config.h  orbitcpp_constants.cc  orbitcpp_exception.h  orbitcpp_object.cc  orbitcpp_object.h  orbitcpp_orb.cc  orbitcpp_orb.h  orbitcpp_poa.cc  orbitcpp_poa.h  orbitcpp_poaexceptionlist.h  orbitcpp_sequence.h  orbitcpp_simple_seq.h  orbitcpp_smartptr.h  orbitcpp_string_seq.h  orbitcpp_tools.h  orbitcpp_traits.h  orbitcpp_typecode.cc  orbitcpp_types.cc  orbitcpp_types.h  poa-cpp-common.cc  poa-cpp-common.h  poa-cpp-skels.h
orbitcpp/orb-cpp/pre-cpp11/: array
orbitcpp/orb-cpp/smartpointers/: arrayfixed_forany.h  arrayvariable_forany.h  arrayvariable_out.h  arrayvariable_var.h  data_out.h  datavar_out.h  sequence_var.h
test/: Makefile.am  client_server.cc  client_server.h  defs.mk  main.cc  rules-common.mk  rules-generated.mk  rules.mk
test/cpp/factory/: Makefile.am  factory-impl.h  factory.idl
test/cpp/threading/: Makefile.am  server.cc
trunk/: ChangeLog  HACKING  MAINTAINERS  README  autogen.sh  configure.ac  configure.in
trunk/docs/: Makefile
trunk/orbitcpp/: Makefile.am
trunk/orbitcpp/idl-compiler/: IDLMethod.h  Makefile.am  debug.h  error.h  language.cc  language.h  main.cc  pass.cc  pass_gather.cc  pass_idl_it.cc  pass_skels.cc  pass_skels.h  pass_stubs.cc  pass_xlate.cc  pass_xlate.h  types.cc
trunk/orbitcpp/idl-compiler/types/: IDLAny.cc  IDLAny.h  IDLArray.cc  IDLArray.h  IDLArrayList.cc  IDLAttribAccessor.h  IDLBoolean.cc  IDLBoolean.h  IDLCaseStmt.cc  IDLCaseStmt.h  IDLCompound.cc  IDLCompound.h  IDLConstant.h  IDLElement.h  IDLEnum.cc  IDLEnum.h  IDLException.cc  IDLException.h  IDLInhibited.cc  IDLInhibited.h  IDLInterface.cc  IDLInterface.h  IDLMember.h  IDLOperation.cc  IDLScope.cc  IDLSequence.cc  IDLSequence.h  IDLSequenceList.cc  IDLSequenceList.h  IDLSimpleType.cc  IDLSimpleType.h  IDLString.cc  IDLStruct.cc  IDLStruct.h  IDLType.cc  IDLType.h  IDLTypeCode.h  IDLTypedef.cc  IDLTypedef.h  IDLUnion.cc  (+9 more)
trunk/orbitcpp/orb-cpp/: orbitcpp_any.cc  orbitcpp_any.h  orbitcpp_compound_seq.h  orbitcpp_exception.cc  orbitcpp_exceptionlist.h  orbitcpp_object.cc  orbitcpp_object.h  orbitcpp_orb.cc  orbitcpp_orb.h  orbitcpp_poa.cc  orbitcpp_poa.h  orbitcpp_policy.cc  orbitcpp_policy.h  orbitcpp_tools.cc  orbitcpp_tools.h  orbitcpp_typecode.cc  orbitcpp_typecode.h  orbitcpp_types.h  poa-cpp-common.h  poa-cpp-skels.cc  poa-cpp-skels.h
trunk/orbitcpp/orb-cpp/smartpointers/: Makefile.am  arrayfixed_forany.h  arrayfixed_var.h  data_var.h  datavar_var.h  objectptr_out.h  objectptr_var.h  sequence_out.h  string_out.h  string_var.h
trunk/orbitcpp/services/: Makefile.am
trunk/orbitcpp/services/name/: Makefile.am
trunk/test/: defs.mk  rules-delegate.mk  rules-generated.mk  rules.mk  test_factory.cc  test_policy.cc
trunk/test/cpp/: Makefile.am  Makefile.am_fragment  rules.mk
trunk/test/cpp/any/: Makefile
trunk/test/cpp/arrays/of_interface/: .cvsignore  client.cc
trunk/test/cpp/factory/: Makefile
trunk/test/cpp/helloworld/: Makefile  helloworld-impl.cc  helloworld-impl.h
trunk/test/cpp/policy/: client.cc  server.cc
trunk/test/cpp/sequences/: Makefile
trunk/test/cpp/sequences/atomic_types/: test.idl
trunk/test/cpp/struct-simple/: Makefile  Makefile.am  client.cc
trunk/test/cpp/structs/: Makefile  Makefile.am
trunk/test/cpp/structs/inside_exception/: Makefile.am  client.cc  test-impl.h
trunk/test/cpp/structs/with_array/: test-impl.h
trunk/test/cpp/structs/with_interfaces/: test-impl.cc  test-impl.h
trunk/test/cpp/threading/: Makefile  helloworld-impl.cc  helloworld.idl
trunk/test/cpp/unions/: Makefile
trunk/test/cpp/unions/atomic_types/: client.cc
trunk/test/cpp/unions/struct/: client.cc
trunk/test/cpp0x/: Makefile
trunk/test/cpp0x/any/: Makefile
trunk/test/cpp0x/any/simple/: client.cc  server.cc  test-impl.h  test.idl
trunk/test/cpp0x/arrays/: Makefile
trunk/test/cpp0x/arrays/of_structs/: client.cc  test.idl
trunk/test/cpp0x/arrays/simple_types/: server.cc  test-impl.cc  test-impl.h  test.idl
trunk/test/cpp0x/delegate/: client.cc  helloworld-impl.cc  helloworld-impl.h
trunk/test/cpp0x/factory/: client.cc  factory-impl.h  server.cc
trunk/test/cpp0x/helloworld/: client.cc
trunk/test/cpp0x/poa/: server.cc
trunk/test/cpp0x/sequences/atomic_types/: client.cc
trunk/test/cpp0x/sequences/string/: test-impl.cc
trunk/test/cpp0x/structs/: Makefile
trunk/test/cpp0x/structs/atomic_types/: test-impl.cc
trunk/test/cpp0x/structs/inside_exception/: test-impl.cc
trunk/test/cpp0x/structs/inside_struct/: test-impl.h
trunk/test/cpp0x/structs/with_array/: client.cc  test-impl.cc  test-impl.h
trunk/test/cpp0x/structs/with_interfaces/: client.cc  test-impl.cc  test-impl.h
trunk/test/cpp0x/structs/with_string/: client.cc  test-impl.cc  test-impl.h
trunk/test/cpp0x/threading/: server_thread.h
trunk/test/cpp0x/unions/atomic_types/: client.cc  test-impl.cc
trunk/test/cpp0x/unions/struct/: client.cc  test-impl.cc
(+89 files in other folders)
