INCLUDES = \
	-I$(top_srcdir) \
	$(WARN_CFLAGS) \
	$(ORBITCPP_CFLAGS)

liborbitcpp_orbcpp_smartpointers_includedir = $(includedir)/orbitcpp-2.0/orbitcpp/orb-cpp/smartpointers

liborbitcpp_orbcpp_smartpointers_include_HEADERS = arrayfixed_forany.h arrayfixed_var.h \
  arrayvariable_forany.h arrayvariable_out.h arrayvariable_var.h \
  data_out.h data_var.h \
  datavar_out.h datavar_var.h \
  objectptr_out.h objectptr_var.h \
  sequence_out.h sequence_var.h \
  string_out.h string_var.h             
